// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Group component Field group component props Can mark inner input as disabled 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-224"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="required block-input field-config field-config"
    disabled={true}
    id="control-224"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    required={true}
    type="text"
    value={undefined}
  />
  
</div>
`;

exports[`Field Group component Field group component props Can mark inner input as required 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-223"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="required block-input field-config field-config"
    disabled={undefined}
    id="control-223"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    required={true}
    type="text"
    value={undefined}
  />
  
</div>
`;

exports[`Field Group component Field group component props Can show an input  1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-22"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="block-input field-config field-config"
    disabled={undefined}
    id="control-22"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    required={false}
    type="text"
    value={undefined}
  />
  
</div>
`;

exports[`Field Group component Field group component props Help text is optional 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-21"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="block-input field-config field-config"
    disabled={undefined}
    id="control-21"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    required={false}
    type="text"
    value={undefined}
  />
  
</div>
`;

exports[`Field Group component Field group component props Works with help text 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-20"
  >
    Who
  </label>
  <input
    aria-describedby="control-20-description"
    className="block-input field-config field-config"
    disabled={undefined}
    id="control-20"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    required={false}
    type="text"
    value={undefined}
  />
  <p
    className="description"
    id="control-20-description"
  >
    Who to say hi to
  </p>
</div>
`;

exports[`Field Group component Uses the Magic group, if type is magic 1`] = `
<div
  className="caldera-magic-select-group caldera-config-field"
>
  <label
    htmlFor="magic-field-group"
  >
    magic
  </label>
  
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <input
      aria-autocomplete="list"
      aria-expanded={false}
      autoComplete="off"
      className="caldera-magic-input caldera-magic-input-magic-field-group"
      id="magic-field-group"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value=""
    />
  </div>
</div>
`;
